NavCollapse: Fix remove caret

--- a/source/tpl_t3_bs3_blank/less/rtl/style.less
+++ b/source/tpl_t3_bs3_blank/less/rtl/style.less
@@ -6,13 +6,13 @@
 article img[align=left],
 .img_caption.left,
 .pull-left.item-image {
-  margin: 0 @gridGutterWidth @t3-global-margin 0;
+  margin: 0 @grid-gutter-width @t3-global-margin 0;
 }
 
 article img[align=right],
 .img_caption.right,
 .pull-right.item-image {
-  margin: 0 0 @t3-global-margin @gridGutterWidth;
+  margin: 0 0 @t3-global-margin @grid-gutter-width;
 }
 
 .languageswitcherload {
